--- a/index.html
+++ b/index.html
@@ -264,8 +264,9 @@
         <ul>
         <li><em>The Red Book of Mathematical Problems</em> by Williams
         &amp; Hardy</li>
-        <li><em>Probability and Random Processes</em> by Grimmet &amp;
-        Stirzaker</li>
+        <li><em>Probability and Random Processes</em> <a
+        href="./readings/probability-and-random-processes/notes.html">[notes]</a>
+        by Grimmet &amp; Stirzaker</li>
         </ul>
       </article>
     </main>
