co255 lec1 notes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
         operations on numbers can be expressed as combinators</li>
         </ul>
         <h1 id="university-courses">University Courses</h1>
-        <p>Italics means self-taught or audited.</p>
+        <p>Italics means self-taught or audited. Courses where I have
+        typeset notes have links.</p>
         <hgroup>
         <h2 id="waterloo-undergraduate-degree">Waterloo Undergraduate
         Degree</h2>
@@ -161,16 +162,16 @@
         2022 - Present
         </p>
         </hgroup>
-        <table style="width:94%;">
+        <table style="width:95%;">
         <colgroup>
+        <col style="width: 6%" />
         <col style="width: 8%" />
-        <col style="width: 11%" />
-        <col style="width: 11%" />
-        <col style="width: 11%" />
-        <col style="width: 11%" />
-        <col style="width: 11%" />
-        <col style="width: 13%" />
-        <col style="width: 12%" />
+        <col style="width: 8%" />
+        <col style="width: 34%" />
+        <col style="width: 8%" />
+        <col style="width: 8%" />
+        <col style="width: 10%" />
+        <col style="width: 9%" />
         </colgroup>
         <thead>
         <tr class="header">
@@ -223,7 +224,7 @@
         <td>W ’24</td>
         <td>MATH 249</td>
         <td>STAT 241</td>
-        <td>CO 255</td>
+        <td><a href="./courses/w24-co255/notes.html">CO 255</a></td>
         <td>CS 240</td>
         <td>CS 241</td>
         <td></td>
