--- a/index.html
+++ b/index.html
@@ -239,7 +239,9 @@
         <ul>
         <li><em>Learn You a Haskell for Great Good!</em> by Miran
         Lipovača</li>
-        <li><em>Concurrency in Go</em> by Katherine Cox-Buday</li>
+        <li><em>Concurrency in Go</em> <a
+        href="./readings/concurrency-in-go/notes.pdf">[notes]</a> by
+        Katherine Cox-Buday</li>
         </ul>
         <p><strong>In-Progress</strong></p>
         <ul>
@@ -265,9 +267,8 @@
         <ul>
         <li><em>The Red Book of Mathematical Problems</em> by Williams
         &amp; Hardy</li>
-        <li><em>Probability and Random Processes</em> <a
-        href="./readings/probability-and-random-processes/notes.html">[notes]</a>
-        by Grimmet &amp; Stirzaker</li>
+        <li><em>Probability and Random Processes</em> by Grimmet &amp;
+        Stirzaker</li>
         </ul>
       </article>
     </main>
