--- a/courses/w24-co255/notes.html
+++ b/courses/w24-co255/notes.html
@@ -19,36 +19,42 @@ Level)</h1>
     <main>
       <nav>
         <ul>
-        <li><a href="#overview" id="toc-overview"><span
-        class="toc-section-number">1</span> Overview</a>
+        <li><a href="#overview" id="toc-overview">Overview</a>
         <ul>
         <li><a href="#optimization-problems"
-        id="toc-optimization-problems"><span
-        class="toc-section-number">1.1</span> Optimization
-        Problems</a></li>
+        id="toc-optimization-problems">Optimization Problems</a></li>
         <li><a href="#possible-outcomes-of-an-optimization-problem"
-        id="toc-possible-outcomes-of-an-optimization-problem"><span
-        class="toc-section-number">1.2</span> Possible Outcomes of an
-        Optimization Problem</a></li>
-        <li><a href="#linear-programs" id="toc-linear-programs"><span
-        class="toc-section-number">1.3</span> Linear Programs</a></li>
-        <li><a href="#integer-linear-programs"
-        id="toc-integer-linear-programs"><span
-        class="toc-section-number">1.4</span> Integer Linear
+        id="toc-possible-outcomes-of-an-optimization-problem">Possible
+        Outcomes of an Optimization Problem</a></li>
+        <li><a href="#linear-programs-lp"
+        id="toc-linear-programs-lp">Linear Programs (LP)</a></li>
+        <li><a href="#integer-linear-programs-ilp"
+        id="toc-integer-linear-programs-ilp">Integer Linear Programs
+        (ILP)</a></li>
+        <li><a href="#convex-programs" id="toc-convex-programs">Convex
         Programs</a></li>
-        <li><a href="#convex-programs" id="toc-convex-programs"><span
-        class="toc-section-number">1.5</span> Convex Programs</a></li>
+        <li><a href="#example-optimization-problems"
+        id="toc-example-optimization-problems">Example Optimization
+        Problems</a>
+        <ul>
+        <li><a href="#transportation-problem"
+        id="toc-transportation-problem">Transportation Problem</a></li>
+        <li><a href="#player-zero-sum-game"
+        id="toc-player-zero-sum-game">2-Player (Zero-Sum) Game</a></li>
+        <li><a href="#generalized-2-player-game"
+        id="toc-generalized-2-player-game">Generalized 2-Player
+        Game</a></li>
+        <li><a href="#fair-division-problem"
+        id="toc-fair-division-problem">Fair Division Problem</a></li>
+        </ul></li>
         </ul></li>
         </ul>
       </nav>
       <article>
         <p>These are notes of the winter 2024 offering of CO255 with
         professor Chaitanya Swamy.</p>
-        <h1 data-number="1" id="overview"><span
-        class="header-section-number">1</span> Overview</h1>
-        <h2 data-number="1.1" id="optimization-problems"><span
-        class="header-section-number">1.1</span> Optimization
-        Problems</h2>
+        <h1 id="overview">Overview</h1>
+        <h2 id="optimization-problems">Optimization Problems</h2>
         <p>We can describe an optimization problem as a problem of the
         form
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>min</mo><mi>f</mi><mrow><mo stretchy="true" form="prefix">(</mo><mi>x</mi><mo stretchy="true" form="postfix">)</mo></mrow></mrow><annotation encoding="application/x-tex">\min f(x)</annotation></semantics></math>
@@ -80,10 +86,8 @@ Level)</h1>
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>max</mo><mo>−</mo><mi>f</mi><mrow><mo stretchy="true" form="prefix">(</mo><mi>x</mi><mo stretchy="true" form="postfix">)</mo></mrow></mrow><annotation encoding="application/x-tex">\max -f(x)</annotation></semantics></math>
         are equivalent optimization problems (they have the same optimal
         solution and negated optimal values).</p>
-        <h2 data-number="1.2"
-        id="possible-outcomes-of-an-optimization-problem"><span
-        class="header-section-number">1.2</span> Possible Outcomes of an
-        Optimization Problem</h2>
+        <h2 id="possible-outcomes-of-an-optimization-problem">Possible
+        Outcomes of an Optimization Problem</h2>
         <p>There are 4 possible outcomes of an optimization problem
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>min</mo><mi>f</mi><mrow><mo stretchy="true" form="prefix">(</mo><mi>x</mi><mo stretchy="true" form="postfix">)</mo></mrow></mrow><annotation encoding="application/x-tex">\min f(x)</annotation></semantics></math>
         for
@@ -111,8 +115,7 @@ Level)</h1>
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>inf</mo><mi>f</mi><mrow><mo stretchy="true" form="prefix">(</mo><mi>x</mi><mo stretchy="true" form="postfix">)</mo></mrow></mrow><annotation encoding="application/x-tex">\inf f(x)</annotation></semantics></math>
         is not attained on the feasible region.</li>
         </ol>
-        <h2 data-number="1.3" id="linear-programs"><span
-        class="header-section-number">1.3</span> Linear Programs</h2>
+        <h2 id="linear-programs-lp">Linear Programs (LP)</h2>
         <p>An optimization problem is linear when</p>
         <ol type="1">
         <li><math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>f</mi><annotation encoding="application/x-tex">f</annotation></semantics></math>
@@ -135,10 +138,11 @@ Level)</h1>
         of the form
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>min</mo><msup><mi>c</mi><mi>⊤</mi></msup><mi>x</mi><mo>+</mo><msub><mi>z</mi><mn>0</mn></msub></mrow><annotation encoding="application/x-tex">\min c^{\top} x + z_0</annotation></semantics></math>
         subject to
-        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi><mi>x</mi><mo>≤</mo><mi>b</mi></mrow><annotation encoding="application/x-tex">A x \le b</annotation></semantics></math>.</p>
-        <h2 data-number="1.4" id="integer-linear-programs"><span
-        class="header-section-number">1.4</span> Integer Linear
-        Programs</h2>
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi><mi>x</mi><mo>≤</mo><mi>b</mi></mrow><annotation encoding="application/x-tex">A x \le b</annotation></semantics></math>.
+        Note that the combination of constraints can also get us
+        equailty constraints.</p>
+        <h2 id="integer-linear-programs-ilp">Integer Linear Programs
+        (ILP)</h2>
         <p>Integer linear programs are linear programs with the
         additional possible constraint that
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mi>x</mi><mi>i</mi></msub><mo>∈</mo><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">x_i \in \mathbb{Z}</annotation></semantics></math>
@@ -146,8 +150,7 @@ Level)</h1>
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>x</mi><mi>i</mi></msub><annotation encoding="application/x-tex">x_i</annotation></semantics></math>.</p>
         <p>This constraint gives us the power to express casework and
         conditional aspects of the optimization problem.</p>
-        <h2 data-number="1.5" id="convex-programs"><span
-        class="header-section-number">1.5</span> Convex Programs</h2>
+        <h2 id="convex-programs">Convex Programs</h2>
         <p>An optimization problem is convex when</p>
         <ol type="1">
         <li>We are minimizing the objective function.</li>
@@ -173,6 +176,85 @@ Level)</h1>
         is convex, we say that
         <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>f</mi><annotation encoding="application/x-tex">f</annotation></semantics></math>
         is concave.</p>
+        <hr />
+        <h2 id="example-optimization-problems">Example Optimization
+        Problems</h2>
+        <h3 id="transportation-problem">Transportation Problem</h3>
+        <p>We are given sets
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>F</mi><mo>,</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">F, C</annotation></semantics></math>
+        of distribution centers and clients respectively. Each
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>i</mi><mo>∈</mo><mi>F</mi></mrow><annotation encoding="application/x-tex">i \in F</annotation></semantics></math>
+        can supply at most
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mi>u</mi><mi>i</mi></msub><mo>≥</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">u_i \ge 0</annotation></semantics></math>
+        infinitely divisible units, and each
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>j</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">j \in C</annotation></semantics></math>
+        requires
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mi>d</mi><mi>j</mi></msub><mo>≥</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">d_j \ge 0</annotation></semantics></math>
+        units. Transporting from center
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>i</mi><annotation encoding="application/x-tex">i</annotation></semantics></math>
+        to client
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>j</mi><annotation encoding="application/x-tex">j</annotation></semantics></math>
+        costs
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>$</mi><msub><mi>c</mi><mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></msub><mi>/</mi><mrow><mi mathvariant="normal">u</mi><mi mathvariant="normal">n</mi><mi mathvariant="normal">i</mi><mi mathvariant="normal">t</mi></mrow></mrow><annotation encoding="application/x-tex">\$ c_{i,j}/\mathrm{unit}</annotation></semantics></math>.</p>
+        <p>How can we minimize the cost required to fulfill the
+        demand?</p>
+        <p>We introduce descision variables
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>x</mi><mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></msub><annotation encoding="application/x-tex">x_{i,j}</annotation></semantics></math>
+        which represent the number of units from
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>i</mi><mo>∈</mo><mi>F</mi></mrow><annotation encoding="application/x-tex">i \in F</annotation></semantics></math>
+        sent to
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>j</mi><mo>∈</mo><mi>C</mi></mrow><annotation encoding="application/x-tex">j \in C</annotation></semantics></math>.
+        Thus, we can represent our optimization problem as the following
+        LP:</p>
+        <p><math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>min</mo><munder><mo>∑</mo><mrow><mi>i</mi><mo>∈</mo><mi>F</mi><mo>,</mo><mi>j</mi><mo>∈</mo><mi>C</mi></mrow></munder><mrow><msub><mi>c</mi><mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></msub><msub><mi>x</mi><mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></msub></mrow></mrow><annotation encoding="application/x-tex"> \min \sum_{i \in F, j \in C}{c_{i,j} x_{i,j}} </annotation></semantics></math></p>
+        <p>subject to</p>
+        <ol type="1">
+        <li><math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mrow><mo stretchy="true" form="prefix">(</mo><mo>∀</mo><mi>j</mi><mo>∈</mo><mi>C</mi><mo stretchy="true" form="postfix">)</mo></mrow><mrow><mo stretchy="true" form="prefix">(</mo><msub><mo>∑</mo><mrow><mi>i</mi><mo>∈</mo><mi>F</mi></mrow></msub><msub><mi>x</mi><mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></msub><mo>=</mo><msub><mi>d</mi><mi>j</mi></msub><mo stretchy="true" form="postfix">)</mo></mrow></mrow><annotation encoding="application/x-tex">( \forall j \in C ) \left( \sum_{i \in F}{x_{i,j}} = d_j \right)</annotation></semantics></math>.
+        All clients have their demand met.</li>
+        <li><math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mrow><mo stretchy="true" form="prefix">(</mo><mo>∀</mo><mi>i</mi><mo>∈</mo><mi>F</mi><mo stretchy="true" form="postfix">)</mo></mrow><mrow><mo stretchy="true" form="prefix">(</mo><msub><mo>∑</mo><mrow><mi>j</mi><mo>∈</mo><mi>C</mi></mrow></msub><msub><mi>x</mi><mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></msub><mo>≤</mo><msub><mi>c</mi><mi>i</mi></msub><mo stretchy="true" form="postfix">)</mo></mrow></mrow><annotation encoding="application/x-tex">( \forall i \in F ) \left( \sum_{j \in C}{x_{i,j}} \le c_i \right)</annotation></semantics></math>.
+        All centers send at most as many units as they have.</li>
+        <li><math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>x</mi><mo>≥</mo><mn>0</mn></mrow><annotation encoding="application/x-tex">x \ge 0</annotation></semantics></math>.
+        All centers send a non-negative amount of units.</li>
+        </ol>
+        <h3 id="player-zero-sum-game">2-Player (Zero-Sum) Game</h3>
+        <p>Players Rose (R) and Colin (C) play a game on the matrix
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mi>A</mi><mo>=</mo><mrow><mo stretchy="true" form="prefix">(</mo><msub><mi>a</mi><mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></msub><mo stretchy="true" form="postfix">)</mo></mrow><mo>∈</mo><msup><mi>ℝ</mi><mrow><mi>m</mi><mo>×</mo><mi>n</mi></mrow></msup></mrow><annotation encoding="application/x-tex">A = (a_{i,j}) \in \mathbb{R}^{m \times n}</annotation></semantics></math>.
+        R and C choose a row
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>i</mi><annotation encoding="application/x-tex">i</annotation></semantics></math>
+        and column
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>j</mi><annotation encoding="application/x-tex">j</annotation></semantics></math>
+        of
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>A</mi><annotation encoding="application/x-tex">A</annotation></semantics></math>
+        respectively (with no knowledge of the other’s choice), then
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>R</mi><annotation encoding="application/x-tex">R</annotation></semantics></math>
+        pays
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>C</mi><annotation encoding="application/x-tex">C</annotation></semantics></math>
+        the amount
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>a</mi><mrow><mi>i</mi><mo>,</mo><mi>j</mi></mrow></msub><annotation encoding="application/x-tex">a_{i,j}</annotation></semantics></math>.</p>
+        <p>What is the best strategy for Rose and Colin
+        respectively?</p>
+        <h4 id="colins-lp">Colin’s LP</h4>
+        <p>Suppose that Colin choses column
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>j</mi><annotation encoding="application/x-tex">j</annotation></semantics></math>
+        with probability
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><msub><mi>p</mi><mi>j</mi></msub><annotation encoding="application/x-tex">p_j</annotation></semantics></math>.
+        We want to maximize the minimum possible expected value of
+        Colin’s winnings regardless of Rose’s choice.</p>
+        <p>If Rose choses row
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mi>i</mi><annotation encoding="application/x-tex">i</annotation></semantics></math>
+        then Colin’s expected winnings are
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mrow><mo stretchy="true" form="prefix">(</mo><msub><mrow><mi mathvariant="normal">R</mi><mi mathvariant="normal">o</mi><mi mathvariant="normal">w</mi></mrow><mi>i</mi></msub><mi>A</mi><mo stretchy="true" form="postfix">)</mo></mrow><mo>⋅</mo><mi>p</mi><mo>=</mo><msub><mrow><mo stretchy="true" form="prefix">(</mo><mi>A</mi><mi>p</mi><mo stretchy="true" form="postfix">)</mo></mrow><mi>i</mi></msub></mrow><annotation encoding="application/x-tex">(\mathrm{Row}_i{A}) \cdot p = (A p)_i</annotation></semantics></math>.
+        Thus, we would like to find</p>
+        <p><math display="block" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><mo>max</mo><munder><mo>min</mo><mrow><mn>1</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>m</mi></mrow></munder><msub><mrow><mo stretchy="true" form="prefix">(</mo><mi>A</mi><mi>p</mi><mo stretchy="true" form="postfix">)</mo></mrow><mi>i</mi></msub></mrow><annotation encoding="application/x-tex"> \max \min_{1 \le i \le m} (A p)_i </annotation></semantics></math></p>
+        <p>but since this our objective function,
+        <math display="inline" xmlns="http://www.w3.org/1998/Math/MathML"><semantics><mrow><msub><mo>min</mo><mrow><mn>1</mn><mo>≤</mo><mi>i</mi><mo>≤</mo><mi>m</mi></mrow></msub><msub><mrow><mo stretchy="true" form="prefix">(</mo><mi>A</mi><mi>p</mi><mo stretchy="true" form="postfix">)</mo></mrow><mi>i</mi></msub></mrow><annotation encoding="application/x-tex">\min_{1 \le i \le m} (A p)_i</annotation></semantics></math>
+        is not affine, this isn’t an LP.</p>
+        <h4 id="rosess-lp">Roses’s LP</h4>
+        <h4 id="relationship">Relationship</h4>
+        <h3 id="generalized-2-player-game">Generalized 2-Player
+        Game</h3>
+        <h3 id="fair-division-problem">Fair Division Problem</h3>
+        <hr />
       </article>
     </main>
   </body>
