--- a/index.html
+++ b/index.html
@@ -17,54 +17,11 @@
       </hgroup>
     </header>
     <main>
+      <!--
       <nav>
-        <ul>
-        <li><a href="#mathematics-competitions"
-        id="toc-mathematics-competitions">Mathematics Competitions</a>
-        <ul>
-        <li><a href="#accolades" id="toc-accolades">Accolades</a></li>
-        <li><a href="#competition-reference"
-        id="toc-competition-reference">Competition Reference</a></li>
-        </ul></li>
-        <li><a href="#projects" id="toc-projects">Projects</a>
-        <ul>
-        <li><a href="#interplanetary-file-explorer"
-        id="toc-interplanetary-file-explorer">Interplanetary File
-        Explorer</a></li>
-        <li><a href="#prognosing-idiopathic-pulmonary-fibrosis"
-        id="toc-prognosing-idiopathic-pulmonary-fibrosis">Prognosing
-        Idiopathic Pulmonary Fibrosis</a></li>
-        </ul></li>
-        <li><a href="#presentations-lectures"
-        id="toc-presentations-lectures">Presentations &amp; Lectures</a>
-        <ul>
-        <li><a href="#streams-and-lazy-evaluation"
-        id="toc-streams-and-lazy-evaluation">Streams and Lazy
-        Evaluation</a></li>
-        <li><a href="#on-the-catalan-numbers"
-        id="toc-on-the-catalan-numbers">On the Catalan Numbers</a></li>
-        <li><a href="#introductory-combinatory-logic"
-        id="toc-introductory-combinatory-logic">Introductory Combinatory
-        Logic</a></li>
-        </ul></li>
-        <li><a href="#university-courses"
-        id="toc-university-courses">University Courses</a>
-        <ul>
-        <li><a href="#waterloo-undergraduate-degree"
-        id="toc-waterloo-undergraduate-degree">Waterloo Undergraduate
-        Degree</a></li>
-        </ul></li>
-        <li><a href="#textbooks-readings"
-        id="toc-textbooks-readings">Textbooks &amp; Readings</a>
-        <ul>
-        <li><a href="#computer-science-textbooks"
-        id="toc-computer-science-textbooks">Computer Science
-        Textbooks</a></li>
-        <li><a href="#mathematics-textbooks"
-        id="toc-mathematics-textbooks">Mathematics Textbooks</a></li>
-        </ul></li>
-        </ul>
+        
       </nav>
+      -->
       <article>
         <h1 id="mathematics-competitions">Mathematics Competitions</h1>
         <h2 id="accolades">Accolades</h2>
@@ -152,8 +109,8 @@
         operations on numbers can be expressed as combinators</li>
         </ul>
         <h1 id="university-courses">University Courses</h1>
-        <p>Italics means self-taught or audited. Courses where I have
-        typeset notes have links.</p>
+        <p>Italics means self-taught or audited. Asterisks are external
+        resources.</p>
         <hgroup>
         <h2 id="waterloo-undergraduate-degree">Waterloo Undergraduate
         Degree</h2>
@@ -162,16 +119,16 @@
         2022 - Present
         </p>
         </hgroup>
-        <table style="width:95%;">
+        <table style="width:99%;">
         <colgroup>
-        <col style="width: 6%" />
-        <col style="width: 8%" />
-        <col style="width: 8%" />
-        <col style="width: 34%" />
-        <col style="width: 8%" />
-        <col style="width: 8%" />
-        <col style="width: 10%" />
-        <col style="width: 9%" />
+        <col style="width: 1%" />
+        <col style="width: 15%" />
+        <col style="width: 16%" />
+        <col style="width: 22%" />
+        <col style="width: 2%" />
+        <col style="width: 15%" />
+        <col style="width: 21%" />
+        <col style="width: 2%" />
         </colgroup>
         <thead>
         <tr class="header">
@@ -213,21 +170,27 @@
         <tr class="even">
         <td>F ’23</td>
         <td>MATH 245</td>
-        <td>MATH 247</td>
+        <td>MATH 247 <a
+        href="https://www.richardwu.ca/notes/math247-notes.pdf">*</a></td>
         <td>STAT 240</td>
         <td>CS 245E</td>
-        <td>CS 246E</td>
+        <td>CS 246E <a
+        href="https://notes.sibeliusp.com/pdf/1189/cs246e.pdf">*</a></td>
         <td></td>
         <td></td>
         </tr>
         <tr class="odd">
         <td>W ’24</td>
-        <td>MATH 249</td>
+        <td>MATH 249 <a
+        href="https://melczer.ca/249/wagner_239_249_notes.pdf">*</a></td>
         <td>STAT 241</td>
-        <td><a href="./courses/w24-co255/notes.html">CO 255</a></td>
+        <td>CO 255 <a
+        href="https://csclub.uwaterloo.ca/~c2kent/LectureNotes/co255-1191/CO255_CKclass.pdf">*</a></td>
         <td>CS 240</td>
         <td>CS 241</td>
-        <td></td>
+        <td><em>CO 330 <a
+        href="https://melczer.ca/330/WagnerNotes.pdf">*</a><a
+        href="https://enumeration.ca/">*</a></em></td>
         <td></td>
         </tr>
         </tbody>
@@ -239,9 +202,8 @@
         <ul>
         <li><em>Learn You a Haskell for Great Good!</em> by Miran
         Lipovača</li>
-        <li><em>Concurrency in Go</em> <a
-        href="./readings/concurrency-in-go/notes.pdf">[notes]</a> by
-        Katherine Cox-Buday</li>
+        <li><em>Concurrency in Go</em> by Katherine Cox-Buday <a
+        href="./readings/concurrency-in-go/notes.pdf">[notes]</a></li>
         </ul>
         <p><strong>In-Progress</strong></p>
         <ul>
