--- a/competition/reference.html
+++ b/competition/reference.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
+    <div class="bg-fixed"></div>
     <header>
       <hgroup>
         <h1 id="title">Competition Mathematics</h1>
@@ -15,248 +16,6 @@
       </hgroup>
     </header>
     <main>
-      <nav>
-        <ul>
-        <li><a href="#algebra" id="toc-algebra"><span
-        class="toc-section-number">1</span> Algebra</a>
-        <ul>
-        <li><a href="#elementary-symmetric-sum"
-        id="toc-elementary-symmetric-sum"><span
-        class="toc-section-number">1.1</span> Elementary Symmetric
-        Sum</a></li>
-        <li><a href="#roots-of-unity" id="toc-roots-of-unity"><span
-        class="toc-section-number">1.2</span> Roots of Unity</a></li>
-        <li><a href="#vietas-formula" id="toc-vietas-formula"><span
-        class="toc-section-number">1.3</span> Vieta’s Formula</a></li>
-        <li><a href="#newton-sums" id="toc-newton-sums"><span
-        class="toc-section-number">1.4</span> Newton Sums</a></li>
-        <li><a href="#field" id="toc-field"><span
-        class="toc-section-number">1.5</span> Field</a></li>
-        </ul></li>
-        <li><a href="#number-theory" id="toc-number-theory"><span
-        class="toc-section-number">2</span> Number Theory</a>
-        <ul>
-        <li><a href="#quadratic-residue"
-        id="toc-quadratic-residue"><span
-        class="toc-section-number">2.1</span> Quadratic Residue</a></li>
-        <li><a href="#legendre-symbol" id="toc-legendre-symbol"><span
-        class="toc-section-number">2.2</span> Legendre Symbol</a></li>
-        <li><a href="#lagranges-theorem"
-        id="toc-lagranges-theorem"><span
-        class="toc-section-number">2.3</span> Lagrange’s
-        Theorem</a></li>
-        <li><a href="#fermats-little-theorem"
-        id="toc-fermats-little-theorem"><span
-        class="toc-section-number">2.4</span> Fermat’s Little
-        Theorem</a></li>
-        <li><a href="#eulers-criterion" id="toc-eulers-criterion"><span
-        class="toc-section-number">2.5</span> Euler’s Criterion</a></li>
-        <li><a href="#quadratic-reciprocity"
-        id="toc-quadratic-reciprocity"><span
-        class="toc-section-number">2.6</span> Quadratic
-        Reciprocity</a></li>
-        <li><a href="#eulers-totient-function"
-        id="toc-eulers-totient-function"><span
-        class="toc-section-number">2.7</span> Euler’s Totient
-        Function</a></li>
-        <li><a href="#möbius-function" id="toc-möbius-function"><span
-        class="toc-section-number">2.8</span> Möbius Function</a></li>
-        <li><a href="#möbius-inversion-formula"
-        id="toc-möbius-inversion-formula"><span
-        class="toc-section-number">2.9</span> Möbius Inversion
-        Formula</a></li>
-        <li><a href="#lifting-the-exponent-lemma"
-        id="toc-lifting-the-exponent-lemma"><span
-        class="toc-section-number">2.10</span> Lifting the Exponent
-        Lemma</a></li>
-        <li><a href="#wilsons-theorem" id="toc-wilsons-theorem"><span
-        class="toc-section-number">2.11</span> Wilson’s Theorem</a></li>
-        </ul></li>
-        <li><a href="#geometry" id="toc-geometry"><span
-        class="toc-section-number">3</span> Geometry</a>
-        <ul>
-        <li><a href="#ordinary-line" id="toc-ordinary-line"><span
-        class="toc-section-number">3.1</span> Ordinary Line</a></li>
-        <li><a href="#sylvester-gallai-theorem"
-        id="toc-sylvester-gallai-theorem"><span
-        class="toc-section-number">3.2</span> Sylvester-Gallai
-        Theorem</a></li>
-        <li><a href="#cevas-theorem" id="toc-cevas-theorem"><span
-        class="toc-section-number">3.3</span> Ceva’s Theorem</a></li>
-        <li><a href="#menelaus-theorem" id="toc-menelaus-theorem"><span
-        class="toc-section-number">3.4</span> Menelaus’ Theorem</a></li>
-        <li><a href="#stewarts-theorem" id="toc-stewarts-theorem"><span
-        class="toc-section-number">3.5</span> Stewart’s Theorem</a></li>
-        <li><a href="#rouths-theorem" id="toc-rouths-theorem"><span
-        class="toc-section-number">3.6</span> Routh’s Theorem</a></li>
-        <li><a href="#eulers-theorem" id="toc-eulers-theorem"><span
-        class="toc-section-number">3.7</span> Euler’s Theorem</a></li>
-        <li><a href="#sylvesters-problem"
-        id="toc-sylvesters-problem"><span
-        class="toc-section-number">3.8</span> Sylvester’s
-        Problem</a></li>
-        <li><a href="#carnots-theorem" id="toc-carnots-theorem"><span
-        class="toc-section-number">3.9</span> Carnot’s Theorem</a></li>
-        <li><a href="#japanese-theorem" id="toc-japanese-theorem"><span
-        class="toc-section-number">3.10</span> Japanese Theorem</a></li>
-        <li><a href="#ravis-substitution"
-        id="toc-ravis-substitution"><span
-        class="toc-section-number">3.11</span> Ravi’s
-        Substitution</a></li>
-        <li><a href="#kimberling-center"
-        id="toc-kimberling-center"><span
-        class="toc-section-number">3.12</span> Kimberling
-        Center</a></li>
-        <li><a href="#barycentric-coordinates"
-        id="toc-barycentric-coordinates"><span
-        class="toc-section-number">3.13</span> Barycentric
-        Coordinates</a></li>
-        <li><a href="#isogonal-conjugate"
-        id="toc-isogonal-conjugate"><span
-        class="toc-section-number">3.14</span> Isogonal
-        Conjugate</a></li>
-        <li><a href="#miquels-point" id="toc-miquels-point"><span
-        class="toc-section-number">3.15</span> Miquel’s Point</a></li>
-        <li><a href="#steiner-line" id="toc-steiner-line"><span
-        class="toc-section-number">3.16</span> Steiner Line</a></li>
-        <li><a href="#inversion" id="toc-inversion"><span
-        class="toc-section-number">3.17</span> Inversion</a></li>
-        <li><a href="#inversion-distance-formula"
-        id="toc-inversion-distance-formula"><span
-        class="toc-section-number">3.18</span> Inversion Distance
-        Formula</a></li>
-        <li><a href="#mass-point-geometry"
-        id="toc-mass-point-geometry"><span
-        class="toc-section-number">3.19</span> Mass-Point
-        Geometry</a></li>
-        </ul></li>
-        <li><a href="#probability" id="toc-probability"><span
-        class="toc-section-number">4</span> Probability</a>
-        <ul>
-        <li><a href="#conditional-probability"
-        id="toc-conditional-probability"><span
-        class="toc-section-number">4.1</span> Conditional
-        Probability</a></li>
-        <li><a href="#indicator-function"
-        id="toc-indicator-function"><span
-        class="toc-section-number">4.2</span> Indicator
-        Function</a></li>
-        <li><a href="#bayes-theorem" id="toc-bayes-theorem"><span
-        class="toc-section-number">4.3</span> Bayes’ Theorem</a></li>
-        <li><a href="#bertrands-ballot-theorem"
-        id="toc-bertrands-ballot-theorem"><span
-        class="toc-section-number">4.4</span> Bertrand’s Ballot
-        Theorem</a></li>
-        <li><a href="#principle-of-inclusion-exclusion"
-        id="toc-principle-of-inclusion-exclusion"><span
-        class="toc-section-number">4.5</span> Principle of
-        Inclusion-Exclusion</a></li>
-        <li><a href="#warings-theorem" id="toc-warings-theorem"><span
-        class="toc-section-number">4.6</span> Waring’s Theorem</a></li>
-        <li><a href="#booles-inequality"
-        id="toc-booles-inequality"><span
-        class="toc-section-number">4.7</span> Boole’s
-        Inequality</a></li>
-        <li><a href="#bonferroni-inequalities"
-        id="toc-bonferroni-inequalities"><span
-        class="toc-section-number">4.8</span> Bonferroni
-        Inequalities</a></li>
-        <li><a href="#kounias-inequality"
-        id="toc-kounias-inequality"><span
-        class="toc-section-number">4.9</span> Kounias’
-        Inequality</a></li>
-        <li><a href="#bernsteins-inequality"
-        id="toc-bernsteins-inequality"><span
-        class="toc-section-number">4.10</span> Bernstein’s
-        Inequality</a></li>
-        </ul></li>
-        <li><a href="#combinatorics" id="toc-combinatorics"><span
-        class="toc-section-number">5</span> Combinatorics</a>
-        <ul>
-        <li><a href="#principle-of-inclusion-exclusion-1"
-        id="toc-principle-of-inclusion-exclusion-1"><span
-        class="toc-section-number">5.1</span> Principle of
-        Inclusion-Exclusion</a></li>
-        <li><a href="#maximum-minimums-identity"
-        id="toc-maximum-minimums-identity"><span
-        class="toc-section-number">5.2</span> Maximum-Minimums
-        Identity</a></li>
-        <li><a href="#case-work" id="toc-case-work"><span
-        class="toc-section-number">5.3</span> Case Work</a></li>
-        <li><a href="#bijective-counting"
-        id="toc-bijective-counting"><span
-        class="toc-section-number">5.4</span> Bijective
-        Counting</a></li>
-        <li><a href="#vandermondes-identity"
-        id="toc-vandermondes-identity"><span
-        class="toc-section-number">5.5</span> Vandermonde’s
-        Identity</a></li>
-        <li><a href="#hockeystick-identity"
-        id="toc-hockeystick-identity"><span
-        class="toc-section-number">5.6</span> Hockeystick
-        Identity</a></li>
-        <li><a href="#catalan-numbers" id="toc-catalan-numbers"><span
-        class="toc-section-number">5.7</span> Catalan Numbers</a></li>
-        <li><a href="#stirling-numbers" id="toc-stirling-numbers"><span
-        class="toc-section-number">5.8</span> Stirling Numbers</a></li>
-        </ul></li>
-        <li><a href="#inequalities" id="toc-inequalities"><span
-        class="toc-section-number">6</span> Inequalities</a>
-        <ul>
-        <li><a href="#min-hm-gm-am-rms-max-inequality"
-        id="toc-min-hm-gm-am-rms-max-inequality"><span
-        class="toc-section-number">6.1</span> min-HM-GM-AM-RMS-max
-        Inequality</a></li>
-        <li><a href="#nesbitts-inequality"
-        id="toc-nesbitts-inequality"><span
-        class="toc-section-number">6.2</span> Nesbitt’s
-        Inequality</a></li>
-        <li><a href="#muirhead-inequality"
-        id="toc-muirhead-inequality"><span
-        class="toc-section-number">6.3</span> Muirhead
-        Inequality</a></li>
-        <li><a href="#schurs-inequality"
-        id="toc-schurs-inequality"><span
-        class="toc-section-number">6.4</span> Schur’s
-        Inequality</a></li>
-        <li><a href="#karamatas-inequality"
-        id="toc-karamatas-inequality"><span
-        class="toc-section-number">6.5</span> Karamata’s
-        Inequality</a></li>
-        <li><a href="#cauchy-schwarz-inequality"
-        id="toc-cauchy-schwarz-inequality"><span
-        class="toc-section-number">6.6</span> Cauchy-Schwarz
-        Inequality</a></li>
-        <li><a href="#hölders-inequality"
-        id="toc-hölders-inequality"><span
-        class="toc-section-number">6.7</span> Hölder’s
-        Inequality</a></li>
-        <li><a href="#jensens-inequality"
-        id="toc-jensens-inequality"><span
-        class="toc-section-number">6.8</span> Jensen’s
-        Inequality</a></li>
-        <li><a href="#minkowskis-inequality"
-        id="toc-minkowskis-inequality"><span
-        class="toc-section-number">6.9</span> Minkowski’s
-        Inequality</a></li>
-        </ul></li>
-        <li><a href="#assorted-problems"
-        id="toc-assorted-problems">Assorted Problems</a>
-        <ul>
-        <li><a href="#high-school-level" id="toc-high-school-level">High
-        School Level</a></li>
-        <li><a href="#undergraduate-level"
-        id="toc-undergraduate-level">Undergraduate Level</a></li>
-        </ul></li>
-        <li><a href="#sources" id="toc-sources">Sources</a>
-        <ul>
-        <li><a href="#high-school-level-1"
-        id="toc-high-school-level-1">High School Level</a></li>
-        <li><a href="#undergraduate-level-1"
-        id="toc-undergraduate-level-1">Undergraduate Level</a></li>
-        </ul></li>
-        </ul>
-      </nav>
       <article>
         <p>Whenever reference is made to “High School level” in this
         document, it should be noted this implicitly also means
