--- a/competition/template.html
+++ b/competition/template.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../style.css">
   </head>
   <body>
+    <div class="bg-fixed"></div>
     <header>
       <hgroup>
         <h1 id="title">$title$</h1>
@@ -15,9 +16,6 @@
       </hgroup>
     </header>
     <main>
-      <nav>
-        $toc$
-      </nav>
       <article>
         $body$
       </article>
