--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
+    <div class="bg-fixed"></div>
     <header>
       <hgroup>
         <h1 id="title">Arnav Kumar</h1>
@@ -122,13 +123,13 @@
         <table style="width:99%;">
         <colgroup>
         <col style="width: 1%" />
-        <col style="width: 15%" />
+        <col style="width: 11%" />
+        <col style="width: 11%" />
         <col style="width: 16%" />
-        <col style="width: 22%" />
-        <col style="width: 2%" />
-        <col style="width: 15%" />
-        <col style="width: 21%" />
-        <col style="width: 2%" />
+        <col style="width: 10%" />
+        <col style="width: 11%" />
+        <col style="width: 14%" />
+        <col style="width: 20%" />
         </colgroup>
         <thead>
         <tr class="header">
@@ -183,15 +184,19 @@
         <td>W ’24</td>
         <td>MATH 249 <a
         href="https://melczer.ca/249/wagner_239_249_notes.pdf">*</a></td>
-        <td>STAT 241</td>
+        <td>STAT 241 <a
+        href="https://doi.org/10.1093/oso/9780192867735.001.0001">*</a></td>
         <td>CO 255 <a
         href="https://csclub.uwaterloo.ca/~c2kent/LectureNotes/co255-1191/CO255_CKclass.pdf">*</a></td>
-        <td>CS 240</td>
+        <td>CS 240 <a
+        href="https://cs.uwaterloo.ca/~plragde/flaneries/FDS/">*</a></td>
         <td>CS 241</td>
         <td><em>CO 330 <a
         href="https://melczer.ca/330/WagnerNotes.pdf">*</a><a
         href="https://enumeration.ca/">*</a></em></td>
-        <td></td>
+        <td><em>CS 485 <a
+        href="https://student.cs.uwaterloo.ca/~cs485/">*</a><a
+        href="https://cs.uwaterloo.ca/~ppoupart/teaching/cs485-winter16/">*</a></em></td>
         </tr>
         </tbody>
         </table>
@@ -207,14 +212,17 @@
         </ul>
         <p><strong>In-Progress</strong></p>
         <ul>
+        <li><em>Understanding Machine Learning: From Theory to
+        Algorithms</em> by Shai Shalev-Shwartz, &amp; Shai
+        Ben-David</li>
         <li><em>Real-Time Rendering</em> by Akenine-Möller, Haines,
         Hoffman, Pesce, Iwanicki, &amp; Hillaire</li>
-        <li><em>Specifying Systems</em> by Leslie Lamport</li>
-        <li><em>Category Theory for Programmers</em> by Bartosz
-        Milewski</li>
         </ul>
         <p><strong>Reading List</strong></p>
         <ul>
+        <li><em>Specifying Systems</em> by Leslie Lamport</li>
+        <li><em>Category Theory for Programmers</em> by Bartosz
+        Milewski</li>
         <li><em>Real World Haskell</em> by O’Sullivan, Stewart &amp;
         Goerzen</li>
         <li><em>Structure and Interpretation of Computer Programs</em>
