--- a/index.html
+++ b/index.html
@@ -18,26 +18,7 @@
       </hgroup>
     </header>
     <main>
-      <!--
-      <nav>
-        
-      </nav>
-      -->
       <article>
-        <h1 id="mathematics-competitions">Mathematics Competitions</h1>
-        <h2 id="accolades">Accolades</h2>
-        <ul>
-        <li>335<sup>th</sup>, score 26; 2022 <strong>William Lowell
-        Putnam Mathematical Competition</strong></li>
-        <li>10<sup>th</sup> in Canada; 2022 <strong>Asian Pacific
-        Mathematics Olympiad</strong></li>
-        <li>18<sup>th</sup> in Canada, 2 time qualifier; 2021-22
-        <strong>Canadian Mathematical Olympiad</strong></li>
-        </ul>
-        <hgroup>
-        <h2 id="competition-reference">Competition Reference</h2>
-        <a href="./competition/reference.html">[html]</a>
-        </hgroup>
         <h1 id="projects">Projects</h1>
         <hgroup>
         <h2 id="interplanetary-file-explorer">Interplanetary File
@@ -215,11 +196,11 @@
         <li><em>Understanding Machine Learning: From Theory to
         Algorithms</em> by Shai Shalev-Shwartz, &amp; Shai
         Ben-David</li>
-        <li><em>Real-Time Rendering</em> by Akenine-Möller, Haines,
-        Hoffman, Pesce, Iwanicki, &amp; Hillaire</li>
         </ul>
         <p><strong>Reading List</strong></p>
         <ul>
+        <li><em>Real-Time Rendering</em> by Akenine-Möller, Haines,
+        Hoffman, Pesce, Iwanicki, &amp; Hillaire</li>
         <li><em>Specifying Systems</em> by Leslie Lamport</li>
         <li><em>Category Theory for Programmers</em> by Bartosz
         Milewski</li>
@@ -235,8 +216,11 @@
         </ul>
         <p><strong>In-Progress</strong></p>
         <ul>
-        <li><em>The Red Book of Mathematical Problems</em> by Williams
-        &amp; Hardy</li>
+        <li><em>Essential Statistics for Data Science</em> by Mu
+        Zhu</li>
+        </ul>
+        <p><strong>Reading List</strong></p>
+        <ul>
         <li><em>Probability and Random Processes</em> by Grimmet &amp;
         Stirzaker</li>
         </ul>
@@ -248,6 +232,9 @@
         Check out the <a href="https://ring.simonwu.dev/prev/arnav">previous</a>,
         <a href="https://ring.simonwu.dev/next/arnav">next</a>,
         or a <a href="https://ring.simonwu.dev/random/arnav">random</a> page in the ring!
+      </p>
+      <p>
+        The colour scheme used on this page is <a href="https://github.com/rebelot/kanagawa.nvim">Kanagawa</a>.
       </p>
     </footer>
   </body>
