--- a/template.html
+++ b/template.html
@@ -29,6 +29,9 @@
         <a href="https://ring.simonwu.dev/next/arnav">next</a>,
         or a <a href="https://ring.simonwu.dev/random/arnav">random</a> page in the ring!
       </p>
+      <p>
+        The colour scheme used on this page is <a href="https://github.com/rebelot/kanagawa.nvim">Kanagawa</a>.
+      </p>
     </footer>
   </body>
 </html>
