added old lessons

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h2 id="streams-and-lazy-evaluation">Streams and Lazy
         Evaluation</h2>
         @ Webber Academy Programming Club <a
-        href="./presentations/231013-streams.py">[notes]</a>
+        href="./presentations/231013-streams/notes.py">[notes]</a>
         <p class="date">
         Oct 13, 2023
         </p>
@@ -68,7 +68,7 @@
         <hgroup>
         <h2 id="on-the-catalan-numbers">On the Catalan Numbers</h2>
         @ Webber Academy Math Society <a
-        href="./presentations/231011-catalan-numbers.pdf">[notes]</a>
+        href="./presentations/231011-catalan-numbers/notes.pdf">[notes]</a>
         <p class="date">
         Oct 11, 2023
         </p>
@@ -77,6 +77,31 @@
         <li>A derivation of the closed formula for the Catalan Numbers
         and examples of well known problems where the Catalan Numbers
         appear</li>
+        </ul>
+        <hgroup>
+        <h2 id="high-school-math-competition-lessons">High School Math
+        Competition Lessons</h2>
+        <p class="date">
+        Summer 2023
+        </p>
+        </hgroup>
+        <ul>
+        <li>Covered divisibilty tricks <a
+        href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[01]</a>,
+        writing solutions <a
+        href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[02]</a>,
+        the pigeonhole principle <a
+        href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[03]</a>,
+        finite series and products <a
+        href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[04]</a>,
+        introductory geometry <a
+        href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[05]</a>,
+        number bases and induction <a
+        href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[06]</a>,
+        special points in a triangle <a
+        href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[07]</a>,
+        and cyclic quadrilaterals <a
+        href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[08]</a></li>
         </ul>
         <hgroup>
         <h2 id="introductory-combinatory-logic">Introductory Combinatory
@@ -155,7 +180,8 @@
         <td>MATH 247 <a
         href="https://www.richardwu.ca/notes/math247-notes.pdf">*</a></td>
         <td>STAT 240</td>
-        <td>CS 245E</td>
+        <td>CS 245E <a
+        href="https://isbnsearch.org/isbn/0122384520">*</a></td>
         <td>CS 246E <a
         href="https://notes.sibeliusp.com/pdf/1189/cs246e.pdf">*</a></td>
         <td></td>
