--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         or a <a href="https://ring.simonwu.dev/random/arnav">random</a> page in the ring!
       </p>
       <p>
-        The colour scheme used on this page is <a href="https://github.com/rebelot/kanagawa.nvim">Kanagawa</a>.
+        The colour scheme used on this page is Kanagawa.
       </p>
     </footer>
   </body>
