--- a/index.html
+++ b/index.html
@@ -85,24 +85,44 @@
         Summer 2023
         </p>
         </hgroup>
-        <ul>
-        <li>Covered divisibilty tricks <a
-        href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[01]</a>,
-        writing solutions <a
-        href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[02]</a>,
-        the pigeonhole principle <a
-        href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[03]</a>,
-        finite series and products <a
-        href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[04]</a>,
-        introductory geometry <a
-        href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[05]</a>,
-        number bases and induction <a
-        href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[06]</a>,
-        special points in a triangle <a
-        href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[07]</a>,
-        and cyclic quadrilaterals <a
-        href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[08]</a></li>
-        </ul>
+        <table style="width:100%;">
+        <colgroup>
+        <col style="width: 23%" />
+        <col style="width: 26%" />
+        <col style="width: 24%" />
+        <col style="width: 25%" />
+        </colgroup>
+        <tbody>
+        <tr class="odd">
+        <td><a
+        href="./presentations/23S-competition-lessons/01-divisibility-tricks.pdf">[01]</a>
+        divisibilty tricks</td>
+        <td><a
+        href="./presentations/23S-competition-lessons/02-writing-solutions.pdf">[02]</a>
+        writing solutions</td>
+        <td><a
+        href="./presentations/23S-competition-lessons/03-pigeonhole-principle.pdf">[03]</a>
+        pigeonhole principle</td>
+        <td><a
+        href="./presentations/23S-competition-lessons/04-finite-series-and-products.pdf">[04]</a>
+        series and products</td>
+        </tr>
+        <tr class="even">
+        <td><a
+        href="./presentations/23S-competition-lessons/05-intro-geometry.pdf">[05]</a>
+        intro geometry</td>
+        <td><a
+        href="./presentations/23S-competition-lessons/06-number-bases-and-induction.pdf">[06]</a>
+        number bases &amp; induction</td>
+        <td><a
+        href="./presentations/23S-competition-lessons/07-points-in-a-triangle.pdf">[07]</a>
+        points in a triangle</td>
+        <td><a
+        href="./presentations/23S-competition-lessons/08-cyclic-quadrilaterals.pdf">[08]</a>
+        cyclic quadrilaterals</td>
+        </tr>
+        </tbody>
+        </table>
         <hgroup>
         <h2 id="introductory-combinatory-logic">Introductory Combinatory
         Logic</h2>
